fix: reduced max-height of logo as taking up too much of page. Set max-height for body of home screen to avoid unnecessary scrolling.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ p {
 
 .logo {
     max-width: 100%;
+    max-height: 200px;
     padding: 10px 0px 10px 10px;
     background-repeat: no-repeat;
 }
@@ -107,7 +108,7 @@ p {
 
 .home-body {
     background: #013602;
-    height: 80vh;
+    max-height: 100%;
     max-width: 100%;
 }
 
